--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,8 @@
             "error",
             "never"
         ],
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/no-explicit-any": "off"
     }
 }
