--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@datastructures-js/priority-queue": "^6.2.0",
     "cytoscape": "^3.23.0",
+    "daisyui": "^2.51.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
